Updated Task 1 Favicon

--- a/01 My Resume Website/index.html
+++ b/01 My Resume Website/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sorav Singh Portfolio</title>
+    <link rel="shortcut icon" href="https://imgs.search.brave.com/uNm_M6iIf0u7-2Tie6WA2Ul2XylMfzGKqGFFZ7_nYM8/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly93MC5w/ZWFrcHguY29tL3dh/bGxwYXBlci81NTMv/Ny9IRC13YWxscGFw/ZXItc3R5bGlzaC1s/ZXR0ZXItcy1hbHBo/YWJldC1pcGhvbmUt/bG9nby1uYW1lLXNo/aW55LXRodW1ibmFp/bC5qcGc" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
